--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ JWT_REFRESH_IN=7d
 
 # Bcrypt
 BCRYPT_SALT_ROUNDS=10
+
+# OAuth Google
+GOOGLE_CLIENT_ID="your google client id"
+GOOGLE_CLIENT_SECRET="your google client secret"
+GOOGLE_REDIRECT_URI="your google redirect url"
