feat: implement aws s3

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,9 @@ BCRYPT_SALT_ROUNDS=10
 GOOGLE_CLIENT_ID="your google client id"
 GOOGLE_CLIENT_SECRET="your google client secret"
 GOOGLE_REDIRECT_URI="your google redirect url"
+
+# Amazon Web Service - Software Development Kit
+AWS_ACCESS_KEY_ID="your access key id"
+AWS_SECRET_ACCESS_KEY="your secret access key"
+AWS_BUCKET_NAME="your bucket name"
+AWS_REGION="your aws region"
