--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,8 @@
     "camelcase": "error",
     "eqeqeq": "error",
     "new-cap": "off",
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "import/no-extraneous-dependencies": "off",
+    "no-underscore-dangle": "off"
   }
 }
