--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "author": "Hizkia Reppi",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.568.0",
+    "@aws-sdk/s3-request-presigner": "^3.568.0",
     "@prisma/client": "^5.13.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
