--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,9 @@
     "new-cap": "off",
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "no-restricted-syntax": "warn",
+    "no-await-in-loop": "warn",
+    "no-param-reassign": "warn"
   }
 }
